added: a few sample works; canvas resizer and BG colour specific to each piece; navigation for works;

--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
         <!-- <div id="art"></div> -->
 
         <div class="container">
-            <div class="sixteen columns canvas">
+            <div class="sixteen columns centre">
                 <!-- Add your site or application content here -->
-                <canvas id="canvas" width="640" height="480" style="background-color:#ffffff; border:1px solid black;" ></canvas>
+                <canvas id="canvas" width="640" height="480" ></canvas>
+            </div>
+            <div class="sixteen columns centre">
+                <button id="prev" class="btn" type="button">previous</button> <button id="next" class="btn" type="button">next</button>
             </div>
         </div>
 
