--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="bower_components/Box2dWeb/Box2dWeb-2.1.a.3.js"></script>
         <!-- App -->
+        <script src="js/Curve.js"></script>
         <script src="js/springyTriangle.js"></script>
         <script src="js/particle.js"></script>
         <script src="js/main.js"></script>
