Jelly Quads be wobbling

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="sixteen columns centre">
                 <!-- Add your site or application content here -->
-                <canvas id="canvas" width="640" height="640" ></canvas>
+                <canvas id="canvas" width="640" height="640" style="box-shadow: 0 0 6px #ccc;"  ></canvas>
             </div>
             <div class="sixteen columns centre">
                 <button id="prev" class="btn" type="button">previous</button> <button id="next" class="btn" type="button">next</button>
@@ -44,6 +44,7 @@
         <script src="js/particle.js"></script>
         <script src="js/node.js"></script>
         <script src="js/polygon.js"></script>
+        <script src="js/jellyQuad.js"></script>
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
