adding new artwork: RopeInterface

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <script src="js/node.js"></script>
         <script src="js/polygon.js"></script>
         <script src="js/jellyQuad.js"></script>
+        <script src="js/ropeInterface.js"></script>
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
