--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Ellsworth Kelly Animated</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-        <link rel="stylesheet" href="css/base.css">
-        <link rel="stylesheet" href="css/layout.css">
-        <link rel="stylesheet" href="css/skeleton.css">
+        <link rel="stylesheet" href="css/styles.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -23,14 +20,13 @@
         <![endif]-->
         <!-- <div id="art"></div> -->
 
-        <div class="container">
-            <div class="sixteen columns centre">
-                <!-- Add your site or application content here -->
-                <canvas id="canvas" width="900" height="560" style="box-shadow: 0 0 6px #ccc;"  ></canvas>
-            </div>
-            <div class="sixteen columns centre">
-                <button id="prev" class="btn" type="button">previous</button> <button id="next" class="btn" type="button">next</button>
-            </div>
+        <canvas id="canvas" width="900" height="560" style="box-shadow: 0 0 6px #ccc;"  ></canvas>
+
+        <div id="prev" class="arrow">
+            <i class="icon-left-open-big"></i>
+        </div> 
+        <div id="next" class="arrow">
+            <i class="icon-right-open-big"></i>
         </div>
 
 
