added info modal and fixed body select offset on the first artwork

--- a/index.html
+++ b/index.html
@@ -18,15 +18,27 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <!-- <div id="art"></div> -->
 
+        <!-- The Artworks -->
         <canvas id="canvas" width="900" height="560" style="box-shadow: 0 0 6px #ccc;"  ></canvas>
 
+        <!-- Info button -->
+        <span id="info">about</span>
+
+        <!-- Navigation -->
         <div id="prev" class="arrow">
             <i class="icon-left-open-big"></i>
         </div> 
         <div id="next" class="arrow">
             <i class="icon-right-open-big"></i>
+        </div>
+
+        <!-- Info Modal -->
+        <div id="overlay"></div>
+        <div id="modal">
+            <span id="close">close</span>
+            <h1>Ellsworth Kelly Animated</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
 
 
