added about content

--- a/index.html
+++ b/index.html
@@ -37,8 +37,20 @@
         <div id="overlay"></div>
         <div id="modal">
             <span id="close">close</span>
+            
             <h1>Ellsworth Kelly Animated</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            
+            <img src="img/manyPolygons.png">
+
+            <p>A couple of years ago I made a <a target="_blank" href="http://processing.org/">Processing</a> sketch with the logic described in the adjoining image. Shortly thereafter I came across Ellsworth Kelly's <a target="_blank" href="http://www.matthewmarks.com/new-york/exhibitions/2011-02-12_ellsworth-kelly/works-in-exhibition/#/images/5/">Black Relief II</a>. It seemed that, unknowingly, I had created an animated version of his painting.</p>
+
+            <p>This led me to explore more of his work. His pieces carry an immense amount of potential energy in my opinion. It's as if they are kinetic sculptures frozen in time.</p>
+
+            <p>This project is an attempt by me to animated some his pieces using web based technologies.</p>
+
+            <p>Most of the works are made using <a target="_blank" href="https://code.google.com/p/box2dweb/">Box2dWeb</a> and a simple mouse click will give impulses to animate them. In the first piece you can grab the interface of the blue blob and the surrounding green fill and drag it around. Press ? to see the underlying skeleton.</p>
+
+            <p>Cheers, <br/><a target="_blank" href="http://lambdafunction.ca/">Varun Vachhar</a></p>
         </div>
 
 
