added google analytics and using relative links

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             
             <h1>Ellsworth Kelly Animated</h1>
             
-            <img src="img/manyPolygons.png">
+            <img src="/img/manyPolygons.png">
 
             <p>A couple of years ago I made a <a target="_blank" href="http://processing.org/">Processing</a> sketch with the logic described in the adjoining image. Shortly thereafter I came across Ellsworth Kelly's <a target="_blank" href="http://www.matthewmarks.com/new-york/exhibitions/2011-02-12_ellsworth-kelly/works-in-exhibition/#/images/5/">Black Relief II</a>. It seemed that, unknowingly, I had created an animated version of his painting.</p>
 
@@ -59,23 +59,23 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="bower_components/Box2dWeb/Box2dWeb-2.1.a.3.js"></script>
         <!-- App -->
-        <script src="js/Curve.js"></script>
-        <script src="js/springyTriangle.js"></script>
-        <script src="js/particle.js"></script>
-        <script src="js/node.js"></script>
-        <script src="js/polygon.js"></script>
-        <script src="js/jellyQuad.js"></script>
-        <script src="js/ropeInterface.js"></script>
-        <script src="js/main.js"></script>
+        <script src="/js/curve.js"></script>
+        <script src="/js/springyTriangle.js"></script>
+        <script src="/js/particle.js"></script>
+        <script src="/js/node.js"></script>
+        <script src="/js/polygon.js"></script>
+        <script src="/js/jellyQuad.js"></script>
+        <script src="/js/ropeInterface.js"></script>
+        <script src="/js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!-- Google Analytics -->
         <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            ga('create', 'UA-22315045-7', 'winkervsbecks.github.io');
+            ga('send', 'pageview');
         </script>
     </body>
 </html>
