--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             
             <h1>Ellsworth Kelly Animated</h1>
             
-            <img src="/img/manyPolygons.png">
+            <img src="img/manyPolygons.png">
 
             <p>A couple of years ago I made a <a target="_blank" href="http://processing.org/">Processing</a> sketch with the logic described in the adjoining image. Shortly thereafter I came across Ellsworth Kelly's <a target="_blank" href="http://www.matthewmarks.com/new-york/exhibitions/2011-02-12_ellsworth-kelly/works-in-exhibition/#/images/5/">Black Relief II</a>. It seemed that, unknowingly, I had created an animated version of his painting.</p>
 
@@ -59,14 +59,14 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="bower_components/Box2dWeb/Box2dWeb-2.1.a.3.js"></script>
         <!-- App -->
-        <script src="/js/curve.js"></script>
-        <script src="/js/springyTriangle.js"></script>
-        <script src="/js/particle.js"></script>
-        <script src="/js/node.js"></script>
-        <script src="/js/polygon.js"></script>
-        <script src="/js/jellyQuad.js"></script>
-        <script src="/js/ropeInterface.js"></script>
-        <script src="/js/main.js"></script>
+        <script src="js/curve.js"></script>
+        <script src="js/springyTriangle.js"></script>
+        <script src="js/particle.js"></script>
+        <script src="js/node.js"></script>
+        <script src="js/polygon.js"></script>
+        <script src="js/jellyQuad.js"></script>
+        <script src="js/ropeInterface.js"></script>
+        <script src="js/main.js"></script>
 
         <!-- Google Analytics -->
         <script>
