--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <script src="js/polygon.js"></script>
         <script src="js/jellyQuad.js"></script>
         <script src="js/ropeInterface.js"></script>
+        <script src="js/revoluteTriangle.js"></script>
         <script src="js/main.js"></script>
 
         <!-- Google Analytics -->
