cleanup and minor bug fixes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <![endif]-->
 
         <!-- The Artworks -->
-        <canvas id="canvas" width="900" height="560" style="box-shadow: 0 0 6px #ccc;"  ></canvas>
+        <canvas id="canvas" width="900" height="560"></canvas>
 
         <!-- Info button -->
         <span id="info">about</span>
@@ -44,11 +44,11 @@
 
             <p>A couple of years ago I made a <a target="_blank" href="http://processing.org/">Processing</a> sketch with the logic described in the adjoining image. Shortly thereafter I came across Ellsworth Kelly's <a target="_blank" href="http://www.matthewmarks.com/new-york/exhibitions/2011-02-12_ellsworth-kelly/works-in-exhibition/#/images/5/">Black Relief II</a>. It seemed that, unknowingly, I had created an animated version of his painting.</p>
 
-            <p>This led me to explore more of his work. His pieces carry an immense amount of potential energy in my opinion. It's as if they are kinetic sculptures frozen in time.</p>
+            <p>This led me to explore more of his work. His pieces carry an immense amount of potential energy, in my opinion. It's as if they are kinetic sculptures frozen in time.</p>
 
-            <p>This project is an attempt by me to animated some his pieces using web based technologies.</p>
+            <p>This project is an attempt by me to animate some his pieces using web based technologies.</p>
 
-            <p>Most of the works are made using <a target="_blank" href="https://code.google.com/p/box2dweb/">Box2dWeb</a> and a simple mouse click will give impulses to animate them. In the first piece you can grab the interface of the blue blob and the surrounding green fill and drag it around. Press ? to see the underlying skeleton.</p>
+            <p>Most of the works are made using <a target="_blank" href="https://code.google.com/p/box2dweb/">Box2dWeb</a> and a simple mouse click/click and hold will give impulses to animate them. In the first piece you can grab the interface of the blue blob and the surrounding green fill and drag it around. Press ? to see the underlying skeleton.</p>
 
             <p>Cheers, <br/><a target="_blank" href="http://lambdafunction.ca/">Varun Vachhar</a></p>
         </div>
