--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <p>A couple of years ago I made a <a target="_blank" href="http://processing.org/">Processing</a> sketch with the logic described in the adjoining image. Shortly thereafter I came across Ellsworth Kelly's <a target="_blank" href="http://www.matthewmarks.com/new-york/exhibitions/2011-02-12_ellsworth-kelly/works-in-exhibition/#/images/5/">Black Relief II</a>. It seemed that, unknowingly, I had created an animated version of his painting.</p>
 
-            <p>This led me to explore more of his work. His pieces carry an immense amount of potential energy, in my opinion. It's as if they are kinetic sculptures frozen in time.</p>
+            <p>This led me to explore more of his work. His pieces carry an immense amount of potential energy in my opinion. It's as if they are kinetic sculptures frozen in time.</p>
 
             <p>This project is an attempt by me to animate some his pieces using web based technologies.</p>
 
