--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Ellsworth Kelly Animated</title>
-        <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <!-- Styles -->
         <link rel="stylesheet" href="css/styles.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
+        <!-- Favicons -->
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
         <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
+
+        <!-- modernizr -->
+        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
